# wod_board_v2

./: .flake8  .gitignore  .pnp.cjs  README.md  docker-compose-ci.yml  docker-compose-dev.yml  package.json  pyproject.toml  tox.ini
.github/: mergify.yml
.github/workflows/: python.yaml
assets/javascript/: duplicate_form.js
core/: routers.py  settings.py  urls.py  utils.py  views.py
docker/ci/: Dockerfile
docker/dev/: Dockerfile
templates/: base.html  home.html  index_base.html
templates/registration/: login.html  register.html
templates/users/: login_base.html  logout.html  profile_base.html  register_base.html  user_profile.html
templates/wods/: list_base.html
tests/: conftest.py
tests/users/: test_views.py
tests/wods/: test_views.py
theme/static_src/: tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html  home.html  index_partial.html
theme/templates/core/: default_form.html
theme/templates/registration/: login.html
theme/templates/users/: login.html  login_partial.html  logout.html  profile.html  profile_partial.html  register.html  register_partial.html
theme/templates/wods/: create.html  create_base.html  create_partial.html  list.html  (+1 more)
users/: forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
users/tests/: conftest.py  test_users.py
wod_board/core/: settings.py
wods/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
wods/migrations/: 0001_initial.py  0002_remove_wod_rounds_round_repetitions_and_more.py  0002_remove_wod_rounds_round_repetitions_round_wod_and_more.py  0003_alter_round_wod.py
