[tool.poetry]
name = "wod-board-v2"
version = "0.1.0"
description = "An application to track your WODs in your Crossfit's Box"
authors = ["Guillaume <7831777+GuillaumeOj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
Django = "^4.2.7"
psycopg = {extras = ["binary"], version = "^3.1.12"}
python-dotenv = "^1.0.0"
django-tailwind = {extras = ["reload"], version = "^3.6.0"}
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.6"}
mypy = "<1.7.0"
pytest-django = "^4.7.0"
django-debug-toolbar = "^4.2.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [ "mypy_django_plugin.main" ]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py"]
